<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/maroon"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/biodata_of_the_author"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:background="@color/black"
        android:textSize="15pt"
        android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="112dp"
                android:layout_height="128dp"
                android:layout_marginTop="32dp"
                android:background="@color/black"
                android:layout_gravity="center"
                android:src="@drawable/me" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nim_h071191061"
                android:textStyle="bold"
                android:textSize="10pt"
                android:background="@color/pink"
                android:textColor="@color/gold"
                android:layout_marginTop="32dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_christian_pentagon_batlayar"
                android:textStyle="bold"
                android:textSize="10pt"
                android:background="@color/pink"
                android:textColor="@color/gold"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ttl_semarang_september_11_2001"
                android:textSize="10pt"
                android:textStyle="bold"
                android:background="@color/pink"
                android:textColor="@color/gold"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_motto"
                android:textStyle="bold"
                android:textSize="10pt"
                android:background="@color/pink"
                android:textColor="@color/gold"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_your_best_god_do_the_rest"
                android:textStyle="bold"
                android:textSize="10pt"
                android:background="@color/pink"
                android:textColor="@color/gold"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:textColor="@color/grey"
                android:layout_marginTop="16dp"
                android:text="@string/back_to_home"
                android:textSize="12pt"
                android:onClick="toHome"/>

            <Button
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:textColor="@color/grey"
                android:text="@string/article"
                android:layout_marginTop="16dp"
                android:textSize="12pt"
                android:onClick="toArticle"/>
        </LinearLayout>

</LinearLayout>
