<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/mu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gold"
        android:background="@color/maroon"
        android:textAlignment="center"
        android:text="@string/welcome_to_my_application"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="25pt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <Button
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:textColor="@color/grey"
            android:text="@string/profile"
            android:textSize="12pt"
            android:onClick="toProfile"/>

        <Button
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:textColor="@color/grey"
            android:text="@string/article"
            android:textSize="12pt"
            android:onClick="toArticle"/>
    </LinearLayout>

</LinearLayout>